erDiagram
    CUSTOMERS ||--o{ ORDERS : places
    ORDERS ||--o{ ORDER_ITEMS : contains
    PRODUCTS ||--o{ ORDER_ITEMS : appears_in
    SELLERS ||--o{ ORDER_ITEMS : sells
    ORDERS ||--o{ ORDER_PAYMENTS : has
    ORDERS ||--o{ ORDER_REVIEWS : receives
    PRODUCT_CATEGORY_TRANSLATION ||..o{ PRODUCTS : translates

    CUSTOMERS {
        text customer_id PK
        text customer_unique_id
        integer customer_zip_code_prefix
        text customer_city
        text customer_state
    }

    ORDERS {
        text order_id PK
        text customer_id FK
        text order_status
        timestamp order_purchase_timestamp
        timestamp order_delivered_customer_date
    }

    ORDER_ITEMS {
        text order_id PK, FK
        integer order_item_id PK
        text product_id FK
        text seller_id FK
        numeric price
        numeric freight_value
    }

    PRODUCTS {
        text product_id PK
        text product_category_name FK
        integer product_weight_g
    }

    SELLERS {
        text seller_id PK
        text seller_city
        text seller_state
    }

    ORDER_PAYMENTS {
        text order_id PK, FK
        integer payment_sequential PK
        text payment_type
        numeric payment_value
    }

    ORDER_REVIEWS {
        text review_id PK
        text order_id PK, FK
        integer review_score
    }

    PRODUCT_CATEGORY_TRANSLATION {
        text product_category_name PK
        text product_category_name_english
    }
